# openpi_pytorch

./: .gitignore  1_e2e_inference.py  2_test_pi0_on_libero.py  3_test_pi0fast_on_libero.py  README.md  attn_test.py  compare_with_jax.py  convert_pi0_to_hf_lerobot.py  convert_pi0fast_to_hf_lerobot.py  lora.py  pi.py  pi_fast.py  pyproject.toml  so100_client.py  so100_eval.py  so100_eval_fast.py  so100_train.py  so100_train_fast.py  test.py  train.py
conversion_scripts/: conversion_utils.py  new_modeling_pi0.py
pi0/: __init__.py  configuration_pi0.py  configuration_pi0fast.py  flex_attention.py  modeling_pi0.py  modeling_pi0fast.py  new_modeling_pi0.py  paligemma_with_expert.py  utils.py
utils/: bridge_test.py  dataset.py  hub.py  normalizers.py  optimizers.py  pretrained.py  schedulers.py  server.py  types.py  utils.py
